# LM-Predictor

./: .gitignore  .gitmodules  CLAUDE.md  DESIGN.md  PROGRESS.md  SCRATCHPAD.md  SPECIFICATION.md  analyze_linear_fit.py  atomic_kernels.json  claude-code_sdk_sdk-headless.md  compare_ols_weighted.py  cost_analyzer.py  evaluate_ols_metrics.py  find_target_mape.py  flop_analysis_meta-llama_Llama-2-7b-hf.json  flop_analyzer.py  graph_extractor.py  hardware.py  inspect_module_forward.py  kernel_cost_schema.json  kernel_dependency_schema.json  kernel_name_map.json  main.py  model_analyzer.py  model_analyzer_agent_sdk.py  model_arch_analyzer_agent_sdk.py  model_arch_meta-llama_Llama-2-7b-hf.json  model_architecture_agent.py  model_inspect.py  model_representation_examples.json  model_representation_schema.json  module_analysis_schema.json  module_analyzer.py  module_analyzer_agent.py  module_analyzer_agent_sdk.py  module_db.json  module_db_examples.json  module_db_schema.json  module_db_schema_v2.json  module_generator_agent.py  (+12 more)
agent_sdks/: CLAUDE.md  model_analyzer_agent_sdk.py  module_analyzer_agent_sdk.py
docs/: DESIGN.md  compiled-noodling-kettle.md
generated_modules/: __init__.py  base.py  registry.py
kernels/: F.batch_norm.json  F.dropout.json  F.elu.json  F.embedding.json  F.gelu.json  F.group_norm.json  F.instance_norm.json  F.layer_norm.json  F.leaky_relu.json  F.linear.json  F.prelu.json  F.relu.json  F.relu6.json  F.scaled_dot_product_attention.json  F.silu.json  F.softmax.json  torch.add.json  torch.addmm.json  torch.baddbmm.json  torch.bmm.json  torch.div.json  torch.matmul.json  torch.mm.json  torch.mul.json
models/: llama-2-7b-hf.json
modules/: torch.nn.modules.dropout.Dropout.json  torch.nn.modules.dropout.Dropout.md  torch.nn.modules.linear.Linear.json  torch.nn.modules.linear.Linear.md  torch.nn.modules.normalization.LayerNorm.json  torch.nn.modules.normalization.LayerNorm.md  torch.nn.modules.sparse.Embedding.json  torch.nn.modules.sparse.Embedding.md  transformers.activations.NewGELUActivation.json  (+13 more)
tests/: gpt2.py  (+11 more)
(+26 files in other folders)
