[project]
name = "lm-predictor"
version = "0.1.0"
description = "Model FLOP/Memory Analysis System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers==4.46.3",
    "torch>=2.7.1",
    "python-dotenv>=1.1.1",
    "deepspeed>=0.17.2",
    "numpy>=2.3.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "einops>=0.8.1",
    "huggingface-hub>=0.33.4",
    "pydantic>=2.11.7",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "jsonschema>=4.25.1",
]
