[project]
name = "lm-predictor"
version = "0.1.0"
description = "Model FLOP/Memory Analysis System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.51.0",
    "torch>=2.7.1",
    "python-dotenv>=1.1.1",
    "deepspeed>=0.17.2",
    "numpy>=2.3.1",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "einops>=0.8.1",
    "huggingface-hub>=0.33.4",
    "pydantic>=2.11.7",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.1",
    "psutil>=7.0.0",
    "pyyaml>=6.0.2",
    "jsonschema>=4.25.1",
    "claude-agent-sdk>=0.1.4",
    "accelerate>=1.12.0",
    "check-jsonschema>=0.35.0",
    "scipy>=1.16.3",
    "matplotlib>=3.10.8",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
    "ty>=0.0.2",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "transformers",
    "pytorch"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ty.src]
exclude = [
    "transformers",
    "pytorch"
]
